--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,28 +1,29 @@
+/* App.css */
+
 /* Navigation in Header.js style */
 .nav-link {
   margin: 0 10px;
   font-size: 20px;
 }
 
-/* QR code style 
-.QRCode {
-  border: 5px solid #000;
-  margin: 40px;
-  box-shadow: 5px 5px 10px #888; 
+/* Table header style */
+.table-header {
+  height: 30px;
+  padding: 0px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
-*/
 
 /* Table style */
 table {
   border-collapse: collapse;
   width: 100%;
   box-shadow: 5px 5px 10px #888; 
-  
 }
 
 th, td {
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 5px;
   text-align: left;
 }
 
