--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,7 +150,7 @@ nav {
 
 /* Table content style for selected rows*/
 .table-content-selected {
-  background-color: #a5a74a;
+  background-color: #5f8c9e;
 }
 
 /* Table style */
