--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,6 +46,7 @@ width: 120px;
   text-align: center;
   font-size: 12px;
   cursor: pointer;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .status-disabled {
@@ -56,6 +57,7 @@ width: 120px;
   text-align: center;
   font-size: 12px;
   cursor: pointer;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -151,6 +153,11 @@ nav {
 /* Table content style for selected rows*/
 .table-content-selected {
   background-color: #5f8c9e;
+}
+
+/* Color for selected text */
+.text-color-selected {
+  color: #09516d;
 }
 
 /* Table style */
