--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -191,6 +191,65 @@ table {
   width: 100%;
   box-shadow: 5px 5px 10px #888; 
 }
+
+/* Mbf content style */
+
+/* Define the style for the main div element */
+.MbfWindowDiv {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 5px 5px 10px #888;
+  border: 1px solid #ddd;
+  background-color: #9e9e9e;
+}
+
+/* Define the style for the header element */
+.MbfWindowHeader {
+  display: 'flex';
+  align-items: center;
+  width: 100%;
+  height: 34px;
+  border-bottom: 1px solid #ddd;
+  background-color: #4CAF50;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+/* Define the style for the header element */
+.MbfWindowFooter {
+  display: 'flex';
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  color: black;
+  margin: 0px;
+  padding: 10px;
+  padding-top: 0px;
+}
+
+/* Define the style for the header text element */
+.MbfWindowHeaderText {
+  color: white;
+  font-weight: bold;
+  margin: 0px;
+  padding: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+};
+
+/* Define the style for the body element */
+.MbfWindowBody {
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 10px;
+  gap: 20px;
+};
+
 /*
 @media (max-width: 600px) {
   .header {
