--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,8 +75,8 @@ width: 120px;
 }
 
 .status-warning {
-  background-color: #c5a61a;
-  color: white;
+  background-color: #e9db18;
+  color: black;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 2px;
