--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,6 +102,17 @@ width: 120px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+.status-blue {
+  background-color: #5f8c9e;
+  color: white;
+  padding: 0.2rem;
+  border-radius: 0.25rem;
+  text-align: center;
+  font-size: 12px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
 /* Home page style */
 
 .PluginsIconButton {
