--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -252,7 +252,7 @@ h3 {
   margin: 0;
 }
 
-/* Mbf table content style */
+/* Mbf table content style 
 .MbfWindowDiv table,
 .MbfWindowDiv table thead,
 .MbfWindowDiv table tbody,
@@ -262,6 +262,7 @@ h3 {
   border: none;
   box-shadow: none;
 }
+*/
 
 /* Define the style for the main div element */
 .MbfWindowDiv {
@@ -270,6 +271,17 @@ h3 {
   box-shadow: 5px 5px 10px #888;
   border: 1px solid #ddd;
   background-color: #9e9e9e;
+}
+
+/* Define the style for the main div element */
+.MbfWindowDivTable {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  margin: -1px;
+  padding: 0;
+  gap: 0;
+  overflow: auto;
 }
 
 /* Define the style for the header element */
