--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -171,6 +171,23 @@ table {
   box-shadow: 5px 5px 10px #888;
 }
 
+thead {
+  position: sticky;
+  top: 0;
+  border: 1px solid #ddd;
+  z-index: 10;
+}
+
+thead th {
+  border: 1px solid #ddd;
+  padding: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: white;
+  background: #4CAF50;
+  text-align: left;
+}
+
 /* Table header style */
 .table-header {
   border: 1px solid #ddd;
@@ -290,6 +307,7 @@ h3 {
   padding: 0;
   gap: 0;
   overflow: auto;
+  display: block;
 }
 
 /* Define the style for the header element */
@@ -297,7 +315,6 @@ h3 {
   display: 'flex';
   align-items: center;
   width: 100%;
-  /* height: 34px */
   border-bottom: 1px solid #ddd;
   background-color: #4CAF50;
   margin: 0px;
@@ -327,15 +344,14 @@ h3 {
   padding-left: 10px;
 }
 
-/* Define the style for the body element */
-/* display: 'flex', flexDirection: 'column', flex: '1 1 auto', width: '100%', margin: '0px', padding: '0px', gap: '0px', overflow: 'auto'*/
+/* Define the style for the body element width: 100%;*/
 .MbfWindowBodyColumn {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
   width: 100%;
   margin: 0px;
-  padding: 0px;
+  padding: 10px 0px 10px 0px;
   gap: 0px;
   overflow: auto;
 }
@@ -346,6 +362,7 @@ h3 {
   flex-direction: row;
   flex: 1 1 auto;
   height: 100%;
+  padding: 0px 10px 0px 10px;
   margin: 0px;
   padding: 0px;
   gap: 0px;
