--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,6 +160,10 @@ nav {
   color: #007BFF;
 }
 
+.nav-link:hodddver {
+  color: #239cb7;
+}
+
 /* Table style */
 table {
   border-collapse: collapse;
