--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,17 +9,19 @@
   --main-grey-color: #616161;
   --main-light-color: #959595;
   --main-dark-color: #333;
-  --main-blue-color: #1976d2;
   --main-icon-color: #4d4d4d;
   --main-log-color: var(--main-text-color);
   --main-button-color: #ffffff;
-  --main-button-bg-color: #4CAF50;
+  --main-button-bg-color: var(--primary-color);
   --main-menu-color: #26292d;
   --main-menu-bg-color: #e2e2e2;
   --main-menu-hover-color: #959595;
   --main-label-color: #616161;
 
-  --header-bg-color: #4CAF50;
+  --primary-color: #4CAF50;
+  --secondary-color: #a58827;
+
+  --header-bg-color: var(--primary-color);
   --header-text-color: white;
 
   --footer-bg-color: var(--div-bg-color);
@@ -54,18 +56,20 @@
   --main-grey-color: #616161;
   --main-light-color: #959595;
   --main-dark-color: #333;
-  --main-blue-color: #1976d2;
   --main-icon-color: var(--main-light-color);
   --main-log-color: var(--main-light-color);
   --main-button-color: #ffffff;
-  --main-button-bg-color: var(--main-blue-color);
+  --main-button-bg-color: var(--primary-color);
   --main-menu-color: var(--main-bg-color);
   --main-menu-bg-color: #e2e2e2;
   --main-menu-hover-color: #959595;
   --main-label-color: var(--main-grey-color);
 
+  --primary-color: #1976d2;
+  --secondary-color: #a58827;
+
   --header-bg-color: #1b1d21;
-  --header-text-color: var(--main-blue-color);
+  --header-text-color: var(--primary-color);
 
   --footer-bg-color: var(--div-bg-color);
   --footer-text-color: var(--div-text-color);
@@ -85,7 +89,7 @@
   --div-border-color: #1b1d21;
   --div-border-radius: 5px;
   --div-title-bg-color: #1b1d21;
-  --div-title-text-color: var(--main-blue-color);
+  --div-title-text-color: var(--primary-color);
 
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
@@ -217,8 +221,21 @@
 /* Header style */
 .header {
   display: flex;
+  flex-wrap: 'wrap';
+  flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  height: 40px;
+}
+
+.sub-header {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   gap: 20px;
   margin: 0;
   padding: 0;
@@ -241,7 +258,7 @@ nav {
 }
 
 .nav-link:hover {
-  color: var(--main-blue-color);
+  color: var(--primary-color);
 }
 
 /* Table style */
@@ -294,6 +311,18 @@ tbody td {
 
 h3 {
   margin: 0;
+}
+
+/* Main screen style */
+.MbfScreen {
+  display: flex;
+  flex-direction: column;
+  width: calc(100vw - 40px);
+  height: calc(100vh - 40px);
+  gap: 20px;
+  margin: 0;
+  padding: 20px;
+  background-color: var(--main-bg-color);
 }
 
 /* Define the style for the main page element */
@@ -401,22 +430,21 @@ h3 {
   overflow: auto;
 }
 
-/* Main screen style */
-.MbfScreen {
-  display: flex;
-  flex-direction: column;
-  width: calc(100vw - 40px);
-  height: calc(100vh - 40px);
-  gap: 20px;
-  margin: 0;
-  padding: 20px;
-  background-color: var(--main-bg-color);
-}
-
-/* Styles for mobile screens iPad Pro landscape */
-@media (max-width: 1350px) {
+/* Styles for mobile screens iPad Pro landscape 1366 x 1024 */
+@media (max-width: 1300px) {
   .MbfScreen {
-    width: 1350px;
+    width: 1300px;
     height: 1024px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+  }
+
+  .sub-header {
+    align-items: start;
+    justify-content: start;
   }
 }
