--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -94,6 +94,52 @@
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
+/* Light Mode */
+[frontend-theme="light"] {
+  --main-bg-color: #e0e0e0;
+  --main-text-color: #212121;
+  --main-grey-color: #616161;
+  --main-light-color: #363636;
+  --main-icon-color: var(--main-light-color);
+  --main-log-color: var(--main-light-color);
+  --main-button-color: #ffffff;
+  --main-button-bg-color: var(--primary-color);
+  --main-menu-color: var(--main-text-color);
+  --main-menu-bg-color: #d6d6d6;
+  --main-menu-hover-color: #959595;
+  --main-label-color: var(--main-grey-color);
+
+  --primary-color: #1976d2;
+  --secondary-color: #a58827;
+
+  --header-bg-color: var(--div-bg-color);
+  --header-text-color: var(--div-text-color);
+
+  --footer-bg-color: var(--div-bg-color);
+  --footer-text-color: var(--div-text-color);
+
+  --ttip-bg-color: #555;
+  --ttip-text-color: #fff;
+
+  --table-border-color: var(--div-bg-color);
+  --table-text-color: var(--main-light-color);
+  --table-even-bg-color: var(--div-bg-color);
+  --table-odd-bg-color: var(--div-bg-color);
+  --table-selected-bg-color: var(--main-grey-color);
+
+  --div-bg-color: #e6e6e6;
+  --div-text-color: #121212;
+  --div-shadow-color: #818181;
+  --div-border-color: var(--div-bg-color);
+  --div-border-radius: 5px;
+  --div-title-bg-color: var(--div-bg-color);
+  --div-title-text-color: var(--div-text-color);
+
+  background-color: var(--main-bg-color);
+  color: var(--main-text-color);
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+}
+
 /* Tooltip style */
 .tooltip-container {
   position: relative;
@@ -426,6 +472,19 @@ h3 {
   padding: 0px;
   gap: 0px;
   overflow: auto;
+}
+
+/* Define the style for the config submit button */
+.configSubmitButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: auto;
+  margin: 20px;
+}
+
+.configSubmitButton button {
+  width: auto;
 }
 
 /* Styles for mobile screens iPad Pro landscape 1366 x 1024 */
