--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,9 +59,9 @@
   --main-log-color: var(--main-light-color);
   --main-button-color: #ffffff;
   --main-button-bg-color: var(--primary-color);
-  --main-menu-color: var(--main-bg-color);
-  --main-menu-bg-color: #e2e2e2;
-  --main-menu-hover-color: #959595;
+  --main-menu-color: var(--main-light-color);
+  --main-menu-bg-color: var(--main-bg-color);
+  --main-menu-hover-color: var(--div-bg-color);
   --main-label-color: var(--main-grey-color);
 
   --primary-color: #1976d2;
@@ -107,7 +107,7 @@
   --main-button-color: #ffffff;
   --main-button-bg-color: var(--primary-color);
   --main-menu-color: var(--main-text-color);
-  --main-menu-bg-color: #ffffff;
+  --main-menu-bg-color: var(--div-bg-color);
   --main-menu-hover-color: #85c0d8;
   --main-label-color: var(--main-grey-color);
 
