--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -174,6 +174,7 @@ html {
 .tooltip-container {
   position: relative;
   display: inline-block;
+  z-index: 10;
 }
 
 .tooltip-text {
@@ -345,6 +346,7 @@ thead th {
   color: var(--header-text-color);
   background: var(--header-bg-color);
   text-align: left;
+  z-index: 10;
 }
 
 tbody td {
