Optimized rendering of HomeDevices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,7 @@
   --main-label-color: var(--main-grey-color);
 
   --primary-color: #009a00;
-  --secondary-color: #316dc7;
+  --secondary-color: #92771f;
 
   --header-bg-color: var(--primary-color);
   --header-text-color: white;
