--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -475,6 +475,15 @@ h3 {
 }
 
 /* Define the style for the body element */
+.MbfWindowBody {
+  display: flex;
+  flex: 1 1 auto;
+  margin: 0px;
+  padding: 10px;
+  gap: 10px;
+}
+
+/* Define the style for the body element */
 .MbfWindowBodyColumn {
   display: flex;
   flex-direction: column;
