--- a/docker/Dockerfile.edge
+++ b/docker/Dockerfile.edge
@@ -16,7 +16,7 @@ FROM ubuntu:jammy AS release
 
 # install curl
 RUN apt-get update \
- && apt-get install -y --no-install-recommends curl \
+ && apt-get install -y --no-install-recommends ca-certificates curl \
  && rm -rf /var/lib/apt/lists/*
 
 # install Node.js 23.x from NodeSource
