--- a/docker/Dockerfile.edge
+++ b/docker/Dockerfile.edge
@@ -12,7 +12,12 @@ RUN npm ci && \
     npm pack
 
 # ─────────────── RUNTIME STAGE ───────────────
-FROM ubuntu:jammy AS release
+FROM scratch AS release
+
+# Import minimal Ubuntu Jammy core ARM64 rootfs
+ADD docker/ubuntu-jammy-core-cloudimg-arm64-root.tar.gz /
+
+ENV DEBIAN_FRONTEND=noninteractive
 
 # install curl
 RUN apt-get update \
