--- a/docker/Dockerfile.edge
+++ b/docker/Dockerfile.edge
@@ -17,15 +17,13 @@ FROM scratch AS release
 # Import minimal Ubuntu Jammy core ARM64 rootfs
 ADD ./docker/ubuntu-jammy-core-cloudimg-arm64-root.tar.gz /
 
+# Set the environment variable to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
 
-# install curl
+# Install node from NodeSource
 RUN apt-get update \
  && apt-get install -y --no-install-recommends ca-certificates curl \
- && rm -rf /var/lib/apt/lists/*
-
-# install Node.js 23.x from NodeSource
-RUN curl -fsSL https://deb.nodesource.com/setup_23.x | bash - \
+ && curl -fsSL https://deb.nodesource.com/setup_23.x | bash - \
  && apt-get install -y --no-install-recommends nodejs \
  && apt-get purge -y apt-transport-https curl gnupg \
  && apt-get autoremove -y \
