--- a/docker/Dockerfile.edge
+++ b/docker/Dockerfile.edge
@@ -7,8 +7,11 @@ COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.js
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 RUN npm ci && \
-    npm run build && \
-    npm shrinkwrap --omit=dev && \
+    npm run cleanBuildProduction && \
+    npm pkg delete devDependencies scripts types && \
+    npx rimraf ./node_modules && \
+    npm install --omit=dev && \
+    npm shrinkwrap && \
     npm pack
 
 # ─────────────── RUNTIME STAGE ───────────────
@@ -26,7 +29,7 @@ RUN apt-get update \
 
 WORKDIR /app    
 COPY --from=base /matterbridge/*.tgz .
-RUN npm install npm@latest *.tgz --global --verbose --omit=dev && rm *.tgz
+RUN npm install npm@latest *.tgz --global --omit=dev && rm *.tgz
 
 # Copy and execute the entrypoint script
 COPY ./docker/entrypoint.sh ./
